# video-download-service

./: Cargo.toml  Containerfile  README.md
files/usr/lib/systemd/system/: video-download-service.service
src/: config.rs  lib.rs  main.rs  templates.rs
systemd/: video-download-service.service
templates/: error.html  filelist.html  finished.html  index.html
