[package]
name = "video-download-service"
version = "0.1.0"
authors = ["Wade Berrier <wberrier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0", features = ["fs"] }
axum = "0"
tower-http = { version = "0", features = ["fs"] }
once_cell = "1"
handlebars = "4"
anyhow = "1"
confy = "0"
serde = { version = "1", features = ["derive"] }
urlencoding = "2"
