[package]
name = "video-download-service"
version = "0.1.0"
authors = ["Wade Berrier <wberrier@gmail.com>"]
edition = "2018"
license = "GPL"
description = "Video dowloader service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0", features = ["fs"] }
axum = "0"
tower-http = { version = "0", features = ["fs"] }
once_cell = "1"
handlebars = "4"
anyhow = "1"
confy = { version = "0", features = ["yaml_conf"], default-features = false }
serde = { version = "1", features = ["derive"] }
urlencoding = "2"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/video-download-service", dest = "/usr/bin/video-download-service", mode = "755" },
    { source = "files/usr/lib/systemd/system/video-download-service.service", dest = "/usr/lib/systemd/system/video-download-service.service", mode = "644" },
]
post_install_script = "if [ $1 -eq 1 ] ; then systemctl enable video-download-service.service >/dev/null 2>&1 || : ; fi"
pre_uninstall_script = "if [ $1 -eq 0 ] ; then systemctl --no-reload disable video-download-service.service > /dev/null 2>&1 || : ; systemctl stop video-download-service.service > /dev/null 2>&1 || : ;  fi"
post_uninstall_script = "systemctl daemon-reload >/dev/null 2>&1 || : ; if [ $1 -ge 1 ] ; then systemctl try-restart video-download-service.service >/dev/null 2>&1 || : ; fi"

[package.metadata.generate-rpm.requires]
squid = "*"
